# xeno-canto-py

./: .gitignore  README.md  noxfile.py  pyproject.toml
docs/: CHANGELOG.md
src/xenocanto/: xenocanto.py
tests/: test.py  test_xenocanto.py
